--- a/public/styles.scss
+++ b/public/styles.scss
@@ -3,3 +3,9 @@ html, body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
 }
+#modals-portal {
+    position: absolute;
+    z-index: 3;
+    left: 40%;
+    top: 10%;
+}
