--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,11 +1,8 @@
+@import 'colors.scss';
+@import 'fonts.scss';
+
 * {box-sizing: border-box;}
 html, body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
-}
-#modals-portal {
-    position: absolute;
-    z-index: 3;
-    left: 40%;
-    top: 10%;
 }
